--- a/assets/scss/app/styles.scss
+++ b/assets/scss/app/styles.scss
@@ -1,7 +1,7 @@
 /*!  
- * Portal - Bootstrap 5 Admin Dashboard Template for Developers
+ * Blog Andre Untuk Membagikan Design Yang Menarik Dan Dapat Kalian Jadikan Inspirasi
  * Version: 2.0
- * Author: Xiaoying Riley
+ * Author: Blog Andre
  * Copyright: 3rd Wave Media Ltd.
  * Website: http://themes.3rdwavemedia.com/
  * Twitter: @3rdwave_themes
